2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 550754 – need to import GIO types from PyGObject package

	* configure.ac: Determine if `gio-types.defs' is installed as part
	of PyGObject.

	* gtk/Makefile.am: Use it to register GIO types if installed.

	* gtk/gdk.override: Make gio.AppLaunchContext import conditional.
	Add conditional import of gio.Icon.

	* gtk/gtk.override: Make gio.MountOperation import conditional.
	Add conditional imports of gio.File and gio.Icon.

2008-09-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.14.defs: comment out for a while gtk_selection_data_get_data
	waiting to fix a problem in codegen.

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: require GTK+ 2.13.8 for pygtk 2.14

	* gtk/gtk-2.14.defs: update with latest API changes in GTK+

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: require pygobject 2.15.4 for pygtk 2.14

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 309554 – gtk.Widget.list_accel_closures not wrapped

	* gtk/gtkwidget.override:
	* tests/Makefile.am:
	* tests/test_accel_closures.py: Wrap gtk_widget_list_accel_closures
	patch from Gustavo Carneiro.

2008-08-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/pygtktreemodel.c: Remove compiler warnings.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 541476 – Update pango examples

	* examples/pango/utf8-demo.py: Fix interpreter line.  Replace all
	escapes with corresponding characters.  Use gtk.main_quit()
	instead of deprecated gtk.mainquit().

	* examples/pango/extentdemo.py: Fix interpreter line.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 529623 – TypeError not raised when setting gtk.TreeView
	adjustment property to None

	* gtk/gtk-base.defs (gtk.ScrolledWindow.set_hadjustment): Allow
	the argument to be None.
	(gtk.ScrolledWindow.set_vadjustment): Likewise.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>
