@@ -1,3 +1,7 @@
+2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	* pygtk-gdk-functions.xml: Document new `gtk.gdk.lock'.
+
 2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	* pygtk-gdkrectangle.xml: Document __repr__.
