@@ -1,3 +1,10 @@
+2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	Bug 539475 – gtk.gdk.threads_(enter|leave) promote dead-lock-prone
+	synchronization
+
+	* gtk/__init__.py (gdk.lock): New context manager.
+
 2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	Bug 550754 – need to import GIO types from PyGObject package
